--- a/LookupBoxSample/LookupBoxSample/LookupBoxSample.csproj
+++ b/LookupBoxSample/LookupBoxSample/LookupBoxSample.csproj
@@ -40,14 +40,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Unnamed.LookupBox\SampleDataSet.cs" />
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Unnamed.LookupBox\LookupBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Unnamed.LookupBox\LookupBox.Designer.cs">
+      <DependentUpon>LookupBox.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Unnamed.LookupBox\LookupBox.resx">
+      <DependentUpon>LookupBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
